refactor(command): Enhance command processor
- Add support for default commands (methods annotated with `@Command` without arguments).
- Implement usage message handling for both main commands and subcommands. When a command is used incorrectly, the defined usage message will be displayed.
- If no usage message is defined, a generic error message is shown.
- Fix a warning by replacing `Collectors.toList()` with `toList()`.